--- a/styles.css
+++ b/styles.css
@@ -68,11 +68,16 @@ body {
   color: #1e1e1e;
 }
 
-.donations {
+#donations {
   text-align: left;
   max-width: 1321px;
   padding: 20px;
   margin: auto;
+  border-radius: 20px;
+  backdrop-filter: blur(10px);
+  background: transparent;
+  border: 2px solid rgba(124, 124, 124, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 
